# gt

./: .gitignore  LICENSE  configure  meson.build
data/: gt.gresource.xml  meson.build
data/gtk/: menus.ui
data/theme/: Adwaita.css
data/ui/: header-bar.ui  preferences.ui  window.ui
src/: gt-application.c  gt-application.h  gt-header-bar.c  gt-header-bar.h  gt-preferences.c  gt-preferences.h  gt-window.c  gt-window.h  main.c  meson.build
